--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <style>
   body {
-    background-color: #0074D9;
+    background-color: #a1c9f1;
     margin: 0;
     padding: 0;
     overflow: hidden;
