--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     position: absolute;
     width: 32px;
     height: 32px;
-    background-image: url('HEART.png');
+    background-image: url('tim.jpg');
     background-size: cover;
     animation: flyHeart linear infinite;
     animation-duration: 5s;
