--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
     position: absolute;
     width: 32px;
     height: 32px;
-    background-image: url('tim.jpg');
+    background-image: url('HEART.png');
     background-size: cover;
     animation: flyHeart linear infinite;
     animation-duration: 5s;
     opacity: 0;
  z-index: -1;
- width: 80px; 
-    height: 80px; 
+ width: 200px; 
+    height: 200px; 
   }
   .text-container {
     text-align: center;
