--- a/index.html
+++ b/index.html
@@ -107,15 +107,26 @@
 
   show();
 
+  // function createHeart() {
+  //   const heart = document.createElement('div');
+  //   heart.classList.add('heart');
+  //   heart.style.left = `${Math.random() * window.innerWidth}px`;
+  //   document.querySelector('.heart-container').appendChild(heart);
+  //   setTimeout(() => {
+  //     heart.remove();
+  //   }, 6000);
+  // }
   function createHeart() {
-    const heart = document.createElement('div');
-    heart.classList.add('heart');
-    heart.style.left = `${Math.random() * window.innerWidth}px`;
-    document.querySelector('.heart-container').appendChild(heart);
-    setTimeout(() => {
-      heart.remove();
-    }, 6000);
-  }
+  const heart = document.createElement('div');
+  heart.classList.add('heart');
+  heart.style.left = `${Math.random() * window.innerWidth}px`;
+  heart.style.top = `${Math.random() * window.innerHeight}px`;
+  document.querySelector('.heart-container').appendChild(heart);
+  setTimeout(() => {
+    heart.remove();
+  }, 6000);
+}
+
 
   setInterval(createHeart, 1000); 
 </script>
